# python-textonly

./: Dockerfile  README.md  app.py  pyproject.toml
textonly/: __init__.py
